fix bug 252436, non-ascii characters not recognized by master password dialog r=dbaron, sr=shaver